Worked on Features Page

--- a/blogs.html
+++ b/blogs.html
@@ -69,7 +69,7 @@
                     <div class="blog-cards-wrapper left-cards">
                         <div class="blog-card blog-card-1">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
@@ -104,7 +104,7 @@
                     <div class="blog-cards-wrapper right-cards">
                         <div class="blog-card blog-card-2">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
@@ -173,7 +173,7 @@
                     <div class="blog-cards-wrapper right-cards">
                         <div class="blog-card blog-card-4">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
@@ -209,7 +209,7 @@
                     <div class="blog-cards-wrapper left-cards">
                         <div class="blog-card blog-card-5">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
@@ -249,7 +249,7 @@
                     <div class="blog-cards-wrapper left-cards">
                         <div class="blog-card blog-card-6">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
@@ -284,7 +284,7 @@
                     <div class="blog-cards-wrapper right-cards">
                         <div class="blog-card blog-card-7">
                             <div class="round-img">
-                                <img src="/assets/images/round.gif" alt="round">
+                                <img src="assets/images/round.gif" alt="round">
                             </div>
                             <div class="blog-wrap-container">
                                 <div class="blogs-page-img">
