--- a/features.html
+++ b/features.html
@@ -62,6 +62,174 @@
     <section>
         <div class="container">
             <p class="feature-heading"><span>blog</span> Both Sidebar</p>
+            <div class="main-feature-wrap">
+                <div class="feature-sides">
+                    <div class="search">
+                        <input type="search"><i class="fa fa-search" aria-hidden="true"></i>
+                    </div>
+
+                    <div class="categories feature-category">
+                        <h1 class="cat-heading">Categories</h1>
+                        <ul>
+                            <li><a href="#">Comapany</a></li>
+                            <hr class="hr">
+                            <li><a href="#">News</a></li>
+                            <hr class="hr">
+                            <li><a href="#">Services</a></li>
+                            <hr class="hr">
+                            <li><a href="#">Other</a></li>
+                            <hr class="hr">
+                        </ul>
+                    </div>
+
+                    <div class="feature-text">
+                        <h1>Text Widget</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
+                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
+                            adipisci eum!
+                            Nostrum, minima
+                            natus rerum facere doloribus soluta sint!</p>
+                    </div>
+
+                    <div class="categories feature-archive">
+                        <h1 class="cat-heading">Archives</h1>
+                        <ul>
+                            <li><a href="#">May 2012 (2)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">April 2012 (3)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">March 2012 (5)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">February 2012 (1)</a></li>
+                            <hr class="hr">
+                        </ul>
+                    </div>
+
+                    <div class="feature-tags">
+                        <h1>Tags</h1>
+                        <ul>
+                            <li>Design</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>HTML</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>CSS</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>CSS</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="feature-side-2">
+                    <div class="feature-blog">
+                        <div class="feature-blog-img">
+                            <img src="assets/images/blog-1.gif" alt="Job">
+                        </div>
+                        <div class="feature-blog-text">
+                            <h1>Job Seeking Out of Your Industry</h1>
+                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
+                                    News,
+                                    Company</span></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
+                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
+                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
+                        </div>
+                        <button> Read More</button>
+                    </div>
+                    <div class="feature-blog">
+                        <div class="feature-blog-img">
+                            <img src="assets/images/blog-7.gif" alt="Job">
+                        </div>
+                        <div class="feature-blog-text">
+                            <h1>What Your College Degree Will Be Worth</h1>
+                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
+                                    News,
+                                    Company</span></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
+                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
+                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
+                        </div>
+                        <button> Read More</button>
+                    </div>
+                    <div class="feature-blog">
+                        <div class="feature-blog-img">
+                            <img src="assets/images/blog-4.gif" alt="Job">
+                        </div>
+                        <div class="feature-blog-text">
+                            <h1>The Street Aesthetic of New York City</h1>
+                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
+                                    News,
+                                    Company</span></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
+                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
+                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
+                        </div>
+                        <button> Read More</button>
+                    </div>
+                </div>
+                <div class="feature-sides">
+                    <div class="feature-text">
+                        <h1>Text Widget</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
+                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
+                            adipisci eum!
+                            Nostrum, minima
+                            natus rerum facere doloribus soluta sint!</p>
+                    </div>
+
+                    <div class="categories feature-archive">
+                        <h1 class="cat-heading">Archives</h1>
+                        <ul>
+                            <li><a href="#">May 2012 (2)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">April 2012 (3)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">March 2012 (5)</a></li>
+                            <hr class="hr">
+                            <li><a href="#">February 2012 (1)</a></li>
+                            <hr class="hr">
+                        </ul>
+                    </div>
+
+                    <div class="feature-tags">
+                        <h1>Tags</h1>
+                        <ul>
+                            <li>Design</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>HTML</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>CSS</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                            <li>CSS</li>
+                            <li>Vestibulum</li>
+                            <li>Web</li>
+                            <li>hosting</li>
+                            <li>domain</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
