Worked on pages.html and contact.html

--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
         integrity="sha512-72McA95q/YhjwmWFMGe8RI3aZIMCTJWPBbV8iQY3jy1z9+bi6+jHnERuNrDPo/WGYEzzNs4WdHNyyEr/yXJ9pA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/styles.css">
-    <title>MExin Blog</title>
+    <title>Blogs</title>
 </head>
 
 <body>
@@ -47,10 +47,10 @@
                     <nav>
                         <ul>
                             <li><a class="btn active" href="index.html">Home</a></li>
-                            <li><a class="btn" href="#">Pages</a></li>
-                            <li><a class="btn" href="#">Features</a></li>
+                            <li><a class="btn" href="pages.html">Pages</a></li>
+                            <li><a class="btn" href="features.html">Features</a></li>
                             <li><a class="btn" href="blogs.html">Blog</a></li>
-                            <li><a class="btn" href="#">Work</a></li>
+                            <li><a class="btn" href="contact.html">Contact</a></li>
                             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                         </ul>
                     </nav>
