--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         integrity="sha512-72McA95q/YhjwmWFMGe8RI3aZIMCTJWPBbV8iQY3jy1z9+bi6+jHnERuNrDPo/WGYEzzNs4WdHNyyEr/yXJ9pA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/styles.css">
-    <title>Features</title>
+    <title>Mexin - Home</title>
 </head>
 
 <body>
@@ -61,182 +61,41 @@
 
     <section>
         <div class="container">
-            <p class="feature-heading"><span>blog</span> Both Sidebar</p>
-            <div class="main-feature-wrap">
-                <div class="feature-sides feature-side-1">
-                    <div class="search">
-                        <input type="search"><i class="fa fa-search" aria-hidden="true"></i>
-                    </div>
-
-                    <div class="categories feature-category">
-                        <h1 class="cat-heading">Categories</h1>
-                        <ul>
-                            <li><a href="#">Comapany</a></li>
-                            <hr class="hr">
-                            <li><a href="#">News</a></li>
-                            <hr class="hr">
-                            <li><a href="#">Services</a></li>
-                            <hr class="hr">
-                            <li><a href="#">Other</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
-
-                    <div class="feature-text">
-                        <h1>Text Widget</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
-                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
-                            adipisci eum!
-                            Nostrum, minima
-                            natus rerum facere doloribus soluta sint!</p>
-                    </div>
-
-                    <div class="categories feature-archive">
-                        <h1 class="cat-heading">Archives</h1>
-                        <ul>
-                            <li><a href="#">May 2012 (2)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">April 2012 (3)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">March 2012 (5)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">February 2012 (1)</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
-
-                    <div class="feature-tags">
-                        <h1>Tags</h1>
-                        <ul>
-                            <li>Design</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>HTML</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                        </ul>
-                    </div>
+            <p class="feature-heading"><span>Contact US</span> </p>
+            <div class="contact-page-wrapper">
+                <div class="contact-card contact-card-1">
+                    <h3>Contact Information</h3>
+                    <p><span class="bold">Address: <br><br></span> No.28 - 63739 street lorem ipsum City, Country <br>
+                        <br>
+                    </p>
+                    <p><span class="bold">Phone: <br><br></span> <i class="fa fa-skype" aria-hidden="true"></i>
+                        <span class="contact-number">+1 (234) 567 8901 <br><br></span>
+                    </p>
+                    <p><span class="bold">Fax: <br><br></span> + 1 (234) 567 8901 <br><br></p>
+                    <p><span class="bold">Email: <br><br></span> zainab.khan9183@gmail.com <br><br></p>
                 </div>
-                <div class="feature-side-2">
-                    <div class="feature-blog">
-                        <div class="feature-blog-img">
-                            <img src="assets/images/blog-1.gif" alt="Job">
+                <div class="contact-page-form">
+                    <form>
+                        <div class="form-data">
+                            What's Your Name? <input type="text" name="name" id="name" placeholder="Name">
                         </div>
-                        <div class="feature-blog-text">
-                            <h1>Job Seeking Out of Your Industry</h1>
-                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
-                                    News,
-                                    Company</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
-                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
-                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
-                        </div>
-                        <button> Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-                    </div>
-                    <div class="feature-blog">
-                        <div class="feature-blog-img">
-                            <img src="assets/images/blog-7.gif" alt="Job">
-                        </div>
-                        <div class="feature-blog-text">
-                            <h1>What Your College Degree Will Be Worth</h1>
-                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
-                                    News,
-                                    Company</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
-                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
-                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
-                        </div>
-                        <button> Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-                    </div>
-                    <div class="feature-blog">
-                        <div class="feature-blog-img">
-                            <img src="assets/images/blog-4.gif" alt="Job">
-                        </div>
-                        <div class="feature-blog-text">
-                            <h1>The Street Aesthetic of New York City</h1>
-                            <p class="f-blog-date">09 AUG 2013 - by John Smith <span class="green-text">in Business,
-                                    News,
-                                    Company</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus qui animi illum
-                                eius, at est quos pariatur assumenda hic natus. Maxime, excepturi? Quaerat recusandae
-                                quasi exercitationem, labore molestiae dolorum ipsam...</p>
-                        </div>
-                        <button> Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-                    </div>
-                    <div class="blogs-pages">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="feature-sides feature-side-3">
-                    <div class="feature-text">
-                        <h1>Text Widget</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
-                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
-                            adipisci eum!
-                            Nostrum, minima
-                            natus rerum facere doloribus soluta sint!</p>
-                    </div>
 
-                    <div class="categories feature-archive">
-                        <h1 class="cat-heading">Archives</h1>
-                        <ul>
-                            <li><a href="#">May 2012 (2)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">April 2012 (3)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">March 2012 (5)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">February 2012 (1)</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
+                        <div class="form-data">
+                            What's Your Email? <input type="email" name="email" id="email" placeholder="Email">
+                        </div>
 
-                    <div class="feature-tags">
-                        <h1>Tags</h1>
-                        <ul>
-                            <li>Design</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>HTML</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                        </ul>
-                    </div>
+                        <div class="form-data">
+                            What's Your Email Subject? <input type="text" name="email-subject" id="email-subject"
+                                placeholder="Subject">
+                        </div>
+                        <hr class="contact-form-hr">
+                        <div class="form-data">
+                            Message to us <textarea name="message" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="purchase-btn submit">
+                            <button>Send Message</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -246,7 +105,7 @@
         <div class="footer-wrapper">
             <div class="container">
                 <div class="footer-contact">
-                    <div class="footer-side">
+                    <div class="footer-side footer-side-1">
                         <div class="heading">
                             <h1>Contact Information</h1>
                         </div>
