--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <nav>
                         <ul>
                             <li><a class="btn active" href="index.html">Home</a></li>
-                            <li><a class="btn" href="#">Pages</a></li>
-                            <li><a class="btn" href="#">Features</a></li>
+                            <li><a class="btn" href="pages.html">Pages</a></li>
+                            <li><a class="btn" href="features.html">Features</a></li>
                             <li><a class="btn" href="blogs.html">Blog</a></li>
-                            <li><a class="btn" href="#">Work</a></li>
+                            <li><a class="btn" href="contact.html">Contact</a></li>
                             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                         </ul>
                     </nav>
@@ -282,7 +282,7 @@
         <div class="footer-wrapper">
             <div class="container">
                 <div class="footer-contact">
-                    <div class="footer-side">
+                    <div class="footer-side footer-side-1">
                         <div class="heading">
                             <h1>Contact Information</h1>
                         </div>
