--- a/pages.html
+++ b/pages.html
@@ -102,7 +102,8 @@
                 </div>
                 <div class="pages-content-side-2">
                     <div class="search">
-                        <input type="search"><i class="fa fa-search" aria-hidden="true"></i>
+                        <input type="search" placeholder="Enter Keywords..."><i class="fa fa-search"
+                            aria-hidden="true"></i>
                     </div>
                     <div class="categories feature-category">
                         <h1 class="cat-heading">Categories</h1>
@@ -122,9 +123,7 @@
                         <h1>Text Widget</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
                             et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
-                            adipisci eum!
-                            Nostrum, minima
-                            natus rerum facere doloribus soluta sint!</p>
+                            adipisci eum</p>
                     </div>
 
                     <div class="categories feature-archive">
