--- a/features.html
+++ b/features.html
@@ -64,71 +64,75 @@
             <p class="feature-heading"><span>blog</span> Both Sidebar</p>
             <div class="main-feature-wrap">
                 <div class="feature-sides feature-side-1">
-                    <div class="search">
-                        <input type="search"><i class="fa fa-search" aria-hidden="true"></i>
-                    </div>
+                    <div class="feature-wrap-1">
+                        <div class="search">
+                            <input type="search"><i class="fa fa-search" aria-hidden="true"></i>
+                        </div>
 
-                    <div class="categories feature-category">
-                        <h1 class="cat-heading">Categories</h1>
-                        <ul>
-                            <li><a href="#">Comapany</a></li>
-                            <hr class="hr">
-                            <li><a href="#">News</a></li>
-                            <hr class="hr">
-                            <li><a href="#">Services</a></li>
-                            <hr class="hr">
-                            <li><a href="#">Other</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
+                        <div class="categories feature-category">
+                            <h1 class="cat-heading">Categories</h1>
+                            <ul>
+                                <li><a href="#">Comapany</a></li>
+                                <hr class="hr">
+                                <li><a href="#">News</a></li>
+                                <hr class="hr">
+                                <li><a href="#">Services</a></li>
+                                <hr class="hr">
+                                <li><a href="#">Other</a></li>
+                                <hr class="hr">
+                            </ul>
+                        </div>
 
-                    <div class="feature-text">
-                        <h1>Text Widget</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
-                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
-                            adipisci eum!
-                            Nostrum, minima
-                            natus rerum facere doloribus soluta sint!</p>
-                    </div>
+                        <div class="feature-text">
+                            <h1>Text Widget</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia
+                                earum
+                                et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
+                                adipisci eum!
+                                Nostrum, minima
+                                natus rerum facere doloribus soluta sint!</p>
+                        </div>
 
-                    <div class="categories feature-archive">
-                        <h1 class="cat-heading">Archives</h1>
-                        <ul>
-                            <li><a href="#">May 2012 (2)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">April 2012 (3)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">March 2012 (5)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">February 2012 (1)</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
+                        <div class="categories feature-archive">
+                            <h1 class="cat-heading">Archives</h1>
+                            <ul>
+                                <li><a href="#">May 2012 (2)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">April 2012 (3)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">March 2012 (5)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">February 2012 (1)</a></li>
+                                <hr class="hr">
+                            </ul>
+                        </div>
 
-                    <div class="feature-tags">
-                        <h1>Tags</h1>
-                        <ul>
-                            <li>Design</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>HTML</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                        </ul>
+                        <div class="feature-tags">
+                            <h1>Tags</h1>
+                            <ul>
+                                <li>Design</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>HTML</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>CSS</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>CSS</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
                 <div class="feature-side-2">
@@ -189,53 +193,56 @@
                     </div>
                 </div>
                 <div class="feature-sides feature-side-3">
-                    <div class="feature-text">
-                        <h1>Text Widget</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia earum
-                            et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
-                            adipisci eum!
-                            Nostrum, minima
-                            natus rerum facere doloribus soluta sint!</p>
-                    </div>
+                    <div class="feature-wrap-2">
+                        <div class="feature-text">
+                            <h1>Text Widget</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum quisquam officia
+                                earum
+                                et debitis nobis fugit <span class="gal-span">explicabo</span> consectetur in, doloribus
+                                adipisci eum!
+                                Nostrum, minima
+                                natus rerum facere doloribus soluta sint!</p>
+                        </div>
 
-                    <div class="categories feature-archive">
-                        <h1 class="cat-heading">Archives</h1>
-                        <ul>
-                            <li><a href="#">May 2012 (2)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">April 2012 (3)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">March 2012 (5)</a></li>
-                            <hr class="hr">
-                            <li><a href="#">February 2012 (1)</a></li>
-                            <hr class="hr">
-                        </ul>
-                    </div>
+                        <div class="categories feature-archive">
+                            <h1 class="cat-heading">Archives</h1>
+                            <ul>
+                                <li><a href="#">May 2012 (2)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">April 2012 (3)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">March 2012 (5)</a></li>
+                                <hr class="hr">
+                                <li><a href="#">February 2012 (1)</a></li>
+                                <hr class="hr">
+                            </ul>
+                        </div>
 
-                    <div class="feature-tags">
-                        <h1>Tags</h1>
-                        <ul>
-                            <li>Design</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>HTML</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                            <li>CSS</li>
-                            <li>Vestibulum</li>
-                            <li>Web</li>
-                            <li>hosting</li>
-                            <li>domain</li>
-                        </ul>
+                        <div class="feature-tags">
+                            <h1>Tags</h1>
+                            <ul>
+                                <li>Design</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>HTML</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>CSS</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                                <li>CSS</li>
+                                <li>Vestibulum</li>
+                                <li>Web</li>
+                                <li>hosting</li>
+                                <li>domain</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
