--- a/blogs.html
+++ b/blogs.html
@@ -46,10 +46,10 @@
                 <div class="nav-bar">
                     <nav>
                         <ul>
-                            <li><a class="btn active" href="index.html">Home</a></li>
+                            <li><a class="btn" href="index.html">Home</a></li>
                             <li><a class="btn" href="pages.html">Pages</a></li>
                             <li><a class="btn" href="features.html">Features</a></li>
-                            <li><a class="btn" href="blogs.html">Blog</a></li>
+                            <li><a class="btn active" href="blogs.html">Blog</a></li>
                             <li><a class="btn" href="contact.html">Contact</a></li>
                             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                         </ul>
@@ -465,28 +465,19 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
-        integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="assets/js/app.js"></script>
 
-    <!-- <script>
+    <script>
         // Add active class to the current button (highlight it)
         var header = document.getElementsByClassName("nav-bar");
         var btns = header.getElementsByClassName("btn");
         for (var i = 0; i < btns.length; i++) {
             btns[i].addEventListener("click", function () {
                 var current = document.getElementsByClassName("active");
-                current[0].className = current[0].className.replace(" active", "");
+                current[0].className = current[0].className.replace(" active", " ");
                 this.className += " active";
             });
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
