--- a/features.html
+++ b/features.html
@@ -46,9 +46,9 @@
                 <div class="nav-bar">
                     <nav>
                         <ul>
-                            <li><a class="btn active" href="index.html">Home</a></li>
+                            <li><a class="btn" href="index.html">Home</a></li>
                             <li><a class="btn" href="pages.html">Pages</a></li>
-                            <li><a class="btn" href="features.html">Features</a></li>
+                            <li><a class="btn active" href="features.html">Features</a></li>
                             <li><a class="btn" href="blogs.html">Blog</a></li>
                             <li><a class="btn" href="contact.html">Contact</a></li>
                             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
