--- a/pages.html
+++ b/pages.html
@@ -46,8 +46,8 @@
                 <div class="nav-bar">
                     <nav>
                         <ul>
-                            <li><a class="btn active" href="index.html">Home</a></li>
-                            <li><a class="btn" href="pages.html">Pages</a></li>
+                            <li><a class="btn" href="index.html">Home</a></li>
+                            <li><a class="btn active" href="pages.html">Pages</a></li>
                             <li><a class="btn" href="features.html">Features</a></li>
                             <li><a class="btn" href="blogs.html">Blog</a></li>
                             <li><a class="btn" href="contact.html">Contact</a></li>
